# Client-Base

./: .gitignore  CMakeLists.txt  main.cpp
Client/: CMakeLists.txt  Client.cpp  Client.h
Client/Manager/: CMakeLists.txt  Manager.cpp  Manager.h
Client/Manager/Event/: Dispatcher.h  Event.h
Client/Manager/Event/Subs/: Cancellable.h  KeyInputEvent.h  LerpEvent.h  LevelEvent.h  MouseInputEvent.h  RenderEvent.h
Client/Manager/Hooks/: Hook.h
Client/Manager/Hooks/Subs/: Actor_Lerp.h  Key_Input.h  Level_Tick.h  Mouse_Input.h  Present_Tick.h
Client/Manager/Modules/: CMakeLists.txt  Category.cpp  Category.h
Client/Manager/Modules/Module/: CMakeLists.txt  Module.cpp  Module.h
Client/Manager/Sigs/: CMakeLists.txt  Sig.cpp  Sig.h
Client/Manager/Sigs/Subs/: Actor_Sig.h  DXGI_Present.h  GameMode_Sig.h  HandleLook_Sig.h  KeyInput_Sig.h  Level_Sig.h  Mouse_Input.h  PacketSender_Sig.h
Mem/: CMakeLists.txt  Mem.cpp  Mem.h
Mem/EnTT/: EnTT.h
Mem/Macro/: Macros.hpp
Mem/Math/: AABB.h  Vec2.h  Vec3.h  Vec4.h
SDK/: CMakeLists.txt  Minecraft.cpp  Minecraft.h
SDK/Subs/: CMakeLists.txt  ClientInstance.cpp  ClientInstance.h
SDK/Subs/Entity/: Actor.cpp  Actor.h  CMakeLists.txt  Player.cpp  Player.h
SDK/Subs/GuiData/: GuiData.h
Utils/: CMakeLists.txt  Utils.cpp  Utils.h
Utils/Debugger/: CMakeLists.txt  Debugger.cpp  Debugger.h
Utils/Render/: CMakeLists.txt  Renderer.cpp  Renderer.h
Utils/Render/ImGui/: CMakeLists.txt
Utils/Render/OverFX/: CMakeLists.txt  OverFX.cpp  OverFX.h
Utils/Render/SwapChainStub/: CMakeLists.txt  SwapChainStub.cpp  SwapChainStub.h
(+35 files in other folders)
